Fix API URL: change from sunuid.fayma.sn/api to api.sunuid.fayma.sn

--- a/examples/demo.html
+++ b/examples/demo.html
@@ -187,7 +187,7 @@
                         <div class="code-example">
 // Initialisation
 const sunuid = initSunuID({
-    apiUrl: 'https://sunuid.fayma.sn/api',
+    apiUrl: 'https://api.sunuid.fayma.sn',
     clientId: 'VOTRE_CLIENT_ID',
     secretId: 'VOTRE_SECRET_ID',
     theme: 'light'
@@ -247,7 +247,7 @@ sunuid.generateKYCQR('kyc-qr-container', {
                     <h3>Options Avancées</h3>
                     <div class="code-example">
 const config = {
-    apiUrl: 'https://sunuid.fayma.sn/api',
+    apiUrl: 'https://api.sunuid.fayma.sn',
     clientId: 'VOTRE_CLIENT_ID',
     secretId: 'VOTRE_SECRET_ID',
     theme: 'light',           // 'light' ou 'dark'
@@ -276,7 +276,7 @@ const config = {
     <script>
         // Configuration de démonstration
         const sunuid = initSunuID({
-            apiUrl: 'https://sunuid.fayma.sn/api',
+            apiUrl: 'https://api.sunuid.fayma.sn',
             clientId: 'test_client_123',
             secretId: 'test_secret_456',
             theme: 'light',
