--- a/simple-test.html
+++ b/simple-test.html
@@ -109,7 +109,7 @@
                 }
                 
                 sunuidInstance = window.initSunuID({
-                    apiUrl: 'https://sunuid.fayma.sn/api',
+                    apiUrl: 'https://api.sunuid.fayma.sn',
                     clientId: '1754174441_36C4685215935D1F',
                     secretId: 'e29c66f185c389eedf7a1e8a242aba741cd659deaa6a9f8d50aa2dec98cce49d',
                     theme: 'light',
