--- a/examples/universal-kyc.html
+++ b/examples/universal-kyc.html
@@ -135,6 +135,9 @@
     <!-- SunuID SDK -->
     <script src="https://cdn.jsdelivr.net/npm/@sunuid/sdk@latest/dist/sunuid-sdk.min.js"></script>
     
+    <!-- QRCode library pour le fallback côté client -->
+    <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.3/lib/browser.min.js"></script>
+    
     <script>
         // Configuration KYC - REMPLACEZ PAR VOS VALEURS
         const config = {
