--- a/examples/universal-login.html
+++ b/examples/universal-login.html
@@ -95,6 +95,9 @@
     <!-- SunuID SDK -->
     <script src="https://cdn.jsdelivr.net/npm/@sunuid/sdk@latest/dist/sunuid-sdk.min.js"></script>
     
+    <!-- QRCode library pour le fallback côté client -->
+    <script src="https://cdn.jsdelivr.net/npm/qrcode@1.5.3/lib/browser.min.js"></script>
+
     <script>
         // Configuration simple - REMPLACEZ PAR VOS VALEURS
         const config = {
