fix: v1.0.40 - Correction gestion réponse API QR
- Ajout logs détaillés pour identifier structure réponse API
- Gestion cas où qrCodeUrl n'existe pas dans la réponse
- Recherche automatique champs alternatifs pour URL QR
- Protection contre erreurs undefined.startsWith()
- Support multiples champs: qrCodeUrl, qr_url, qrUrl, url, image_url, imageUrl

--- a/integration-minimale.html
+++ b/integration-minimale.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.socket.io/4.7.4/socket.io.min.js"></script>
     
     <!-- SunuID SDK -->
-    <script src="https://unpkg.com/sunuid-sdk@1.0.38/dist/sunuid-sdk.min.js"></script>
+    <script src="./dist/sunuid-sdk.min.js"></script>
     
     <style>
         body {
